--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-systemProp.sonar.host.url=http://localhost:9000
+#systemProp.sonar.host.url=http://localhost:9000
 
 #----- Token generated from an account with 'publish analysis' permission
-systemProp.sonar.login=<token>
+#systemProp.sonar.login=<token>
