--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -1,7 +1,7 @@
 webdriver {
   driver = chrome
 }
-headless.mode = true
+headless.mode = false
 
 #
 # Chrome options can be defined using the chrome.switches property
@@ -33,17 +33,17 @@ drivers {
 # You can find more details about this feature at https://johnfergusonsmart.com/environment-specific-configuration-in-serenity-bdd/
 #
 
-environments {
-  default {
-    webdriver.base.url = "https://duckduckgo.com"
-  }
-  dev {
-    webdriver.base.url = "https://duckduckgo.com/dev"
-  }
-  staging {
-    webdriver.base.url = "https://duckduckgo.com/staging"
-  }
-  prod {
-    webdriver.base.url = "https://duckduckgo.com/prod"
-  }
-}
+//environments {
+//  default {
+//    webdriver.base.url = "https://duckduckgo.com"
+//  }
+//  dev {
+//    webdriver.base.url = "https://duckduckgo.com/dev"
+//  }
+//  staging {
+//    webdriver.base.url = "https://duckduckgo.com/staging"
+//  }
+//  prod {
+//    webdriver.base.url = "https://duckduckgo.com/prod"
+//  }
+//}
