--- a/gradle/libraries.gradle
+++ b/gradle/libraries.gradle
@@ -25,7 +25,12 @@ ext{
                     assertj: "org.assertj:assertj-core:${assertJVersion}",
                     json: "org.json:json:20140107",
                     log4j: "log4j:log4j:1.2.17",
-                    jsonsimple:"com.googlecode.json-simple:json-simple:1.1.1"
+                    jsonsimple:"com.googlecode.json-simple:json-simple:1.1.1",
+                    poi:"org.apache.poi:poi:3.15",
+                    poiooxml:"org.apache.poi:poi-ooxml:3.15",
+                    xmlbeans:"org.apache.xmlbeans:xmlbeans:2.6.0",
+                    mysql:"mysql:mysql-connector-java:8.0.13",
+                    opencsv: "com.opencsv:opencsv:4.5"
             ]
     ]
 }
