--- a/serenity.properties
+++ b/serenity.properties
@@ -1,7 +1,7 @@
 serenity.project.name=Serenity and Cucumber Quick Start
 serenity.maintain.session=true
 webdriver.driver=chrome
-webdriver.chrome.driver=D:/chromedriver.exe
+webdriver.chrome.driver=src/test/resources/webdriver/windows/chromedriver.exe
 chrome.switches=--incognito
 serenity.driver.capabilities=version:78.0;enableVPC=true
 serenity.driver.maximized=true
